log
Fri 19 Aug 2022 04:34:58 PM UTC: 
 tests:  0|6
total_score: 0/70
24d1ed4
Fri 19 Aug 2022 04:40:59 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:3: error: unknown type name ‘list’; did you mean ‘List’?
   32 |   list * lista = (list *)malloc(sizeof(list));
      |   ^~~~
      |   List
list.c:32:19: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   32 |   list * lista = (list *)malloc(sizeof(list));
      |                   ^~~~
      |                   List
list.c:32:19: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:25: error: expected expression before ‘)’ token
   32 |   list * lista = (list *)malloc(sizeof(list));
      |                         ^
list.c:32:10: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |   list * lista = (list *)malloc(sizeof(list));
      |          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
a74e29f
Fri 19 Aug 2022 04:41:15 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:10: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |   List * lista = (List *)malloc(sizeof(List));
      |          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
a29d0f4
Fri 19 Aug 2022 04:41:25 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2bb662d
Fri 19 Aug 2022 04:49:05 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:7: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   37 |   if(!lista->first) return NULL;
      |       ^~~~~
      |       list
list.c:37:7: note: each undeclared identifier is reported only once for each function it appears in
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5558d4d
Fri 19 Aug 2022 04:49:27 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:11: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   37 |   if(!list->first) return NULL;
      |           ^~
list.c:38:21: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   38 |   list->current=list->first;
      |                     ^~
list.c:39:14: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   39 |   return list->first->data;
      |              ^~
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
140da2c
Fri 19 Aug 2022 04:51:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:7: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   37 |   if(!lista->first) return NULL;
      |       ^~~~~
      |       list
list.c:37:7: note: each undeclared identifier is reported only once for each function it appears in
list.c:38:21: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   38 |   list->current=list->first;
      |                     ^~
list.c:39:14: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   39 |   return list->first->data;
      |              ^~
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ddeee6e
Fri 19 Aug 2022 04:51:51 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:12: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   37 |   if(!*list->first) return NULL;
      |            ^~
list.c:38:21: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   38 |   list->current=list->first;
      |                     ^~
list.c:39:14: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   39 |   return list->first->data;
      |              ^~
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
62b0c0b
